--- a/test.scss
+++ b/test.scss
@@ -120,7 +120,7 @@ section:nth-child(7) {
       }
     }
 
-    &.in-view {
+    &.active {
       pointer-events: none;
       padding-left: 1em;
 
